Addes SignInform.js and changed index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </label>
       </div>
       <!--  <button id="LoginButton" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>  -->
-      <button id="LoginButton" class="w-100 btn btn-lg btn-primary" type="submit">Sign in ( not in use )</button>
+      <button id="LoginButton" class="w-100 btn btn-lg btn-primary" type="submit">Sign in - Local database</button>
       <br>
       <br>
       <hr>
@@ -96,6 +96,9 @@
   <!-- ALWAYS PUT SCRIPT HERE !!!!!  -->
 
   <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript" src="SignInForm.js"></script>
+
+
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
